--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -1,60 +1,124 @@
-<div class="bg-login-image ">
-    <div class="div200">
-    </div>
-    <div class="col-lg-4">
-        <div class="d-flex justify-content-end">
-            <ng-select [(ngModel)]="language" [items]="languageList" bindLabel="name" bindValue="id" [multiple]="false" [readonly]="false" [searchable]="false" [clearable]="false" placeholder="Select" class="col-6" (change)="changeLang(language)">
-                <ng-template ng-label-tmp let-item="item">
-                    <img class="m-1" height="15" width="15" [src]="item.img" />
-                    <b>{{item.name}}</b>
-                </ng-template>
-            </ng-select>
-        </div>
-        <div class="mar-2">
-            <div class="text-left">
-                <h1 class="h1 text-main mb-1">{{ 'login.title' | translate }}</h1>
-                <p class="text-main mb-1">
-                    {{ 'login.description' | translate }}</p>
-                <p class="text-danger" *ngIf="message">{{ 'login.message_error' | translate }}</p>
-            </div>
-        </div>
-        <form class="user" [formGroup]="form">
-
-            <validation-field-group [group]="form" [controlName]="'username'" [formSubmitAttempt]="formSubmitAttempt">
-                <!-- <input type="text" formControlName="username" placeholder="Enter Username..." /> -->
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control m-0" formControlName="username" placeholder="Enter Username..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <span class="input-group-text" id="basic-addon2">@scg.com</span>
+<div class="wrap">
+    <div class="image">
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-4 rounded shadow">
+                <ng-container *ngIf="stateForm=='login'">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-light text-center text-main mb-1">{{ 'login.title' | translate }}</h1>
+                            <p class="text-main mb-1 text-light">
+                                {{ 'login.description' | translate }}</p>
+                            <p class="text-danger" *ngIf="message">{{message}}</p>
+                        </div>
                     </div>
-                </div>
-            </validation-field-group>
+                    <div class="input-group mb-3">
+                        <label class="col-3 col-form-label text-light">{{"login.language" | translate}}</label>
+                        <ng-select class="col-9 p-0" [(ngModel)]="language" [items]="languageList" bindLabel="name" bindValue="id" [multiple]="false" [readonly]="false" [searchable]="false" [clearable]="false" placeholder="Select" (change)="changeLang(language)">
+                            <ng-template ng-label-tmp let-item="item">
+                                <img class="m-1" height="15" width="15" [src]="item.img" />
+                                <b>{{item.name}}</b>
+                            </ng-template>
+                        </ng-select>
+                    </div>
+                    <form class="user" [formGroup]="form">
 
-            <validation-field-group [group]="form" [controlName]="'password'" [formSubmitAttempt]="formSubmitAttempt">
-                <input type="password" formControlName="password" placeholder="Password" />
-            </validation-field-group>
-            <!-- <a class="small float-right mr-1" routerLink="/login/forgot-password"
-                        routerLinkActive="active">Forget password?</a> -->
+                        <validation-field-group [group]="form" [controlName]="'username'" [formSubmitAttempt]="formSubmitAttempt" [requiredSelect]="true">
+                            <div class="input-group mb-3">
+                                <label class="col-3 col-form-label text-light">{{"login.input1" | translate}}</label>
+                                <input type="email" autocomplete="off" class="form-control m-0" formControlName="username" placeholder="Enter Email...">
+                            </div>
+                        </validation-field-group>
 
+                        <validation-field-group [group]="form" [controlName]="'password'" [formSubmitAttempt]="formSubmitAttempt">
+                            <div class="input-group mb-3">
+                                <label class="col-3 col-form-label text-light">{{"login.input2" | translate}}</label>
+                                <input type="password" autocomplete="off" class="form-control m-0 " formControlName="password" placeholder="Enter Password...">
+                            </div>
+                        </validation-field-group>
 
-            <!-- <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Remember Me</label>
-                      </div> -->
+                        <div class="text-center">
+                            <button type="button" class="button-login" (click)="submit()">{{"login.submit" | translate}}</button>
+                            <button type="button" class="btn btn-info btn-block" (click)="switchForm('register')">{{"login.register" | translate}}</button>
+                        </div>
+                        <div class="text-right mt-2">
+                            <a class="text-primary" (click)="switchForm('forgetpassword')">{{"login.forgetpassword" | translate}}</a>
+                        </div>
+                    </form>
+                </ng-container>
+                <ng-container *ngIf="stateForm=='register'">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-light text-center text-main mb-1">{{ 'register.title' | translate }}</h1>
+                            <p class="text-main mb-1 text-light">
+                                {{ 'register.description' | translate }}</p>
+                            <p class="text-danger" *ngIf="message">{{message}}</p>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        <label class="col-3 col-form-label text-light">{{"register.language" | translate}}</label>
+                        <ng-select class="col-9 p-0" [(ngModel)]="language" [items]="languageList" bindLabel="name" bindValue="id" [multiple]="false" [readonly]="false" [searchable]="false" [clearable]="false" placeholder="Select" (change)="changeLang(language)">
+                            <ng-template ng-label-tmp let-item="item">
+                                <img class="m-1" height="15" width="15" [src]="item.img" />
+                                <b>{{item.name}}</b>
+                            </ng-template>
+                        </ng-select>
+                    </div>
+                    <form class="user" [formGroup]="form">
 
-            <div class="text-center">
-                <button class="button-login" (click)="login()">{{ 'login.submit' | translate }}</button>
+                        <validation-field-group [group]="form" [controlName]="'username'" [formSubmitAttempt]="formSubmitAttempt" [requiredSelect]="true">
+                            <div class="input-group mb-3">
+                                <label class="col-3 col-form-label text-light">{{"register.input1" | translate}}</label>
+                                <input type="email" autocomplete="off" class="form-control m-0" formControlName="username" placeholder="Enter Email...">
+                            </div>
+                        </validation-field-group>
+
+                        <validation-field-group [group]="form" [controlName]="'password'" [formSubmitAttempt]="formSubmitAttempt">
+                            <div class="input-group mb-3">
+                                <label class="col-3 col-form-label text-light">{{"register.input2" | translate}}</label>
+                                <input type="password" autocomplete="off" class="form-control m-0 " formControlName="password" placeholder="Enter Password...">
+                            </div>
+                        </validation-field-group>
+
+                        <div class="text-center">
+                            <button type="button" class="button-login" (click)="submit()">{{"register.register" | translate}}</button>
+                            <button type="button" class="btn btn-info btn-block" (click)="switchForm('login')">{{"register.submit" | translate}}</button>
+                        </div>
+                    </form>
+                </ng-container>
+                <ng-container *ngIf="stateForm=='forgetpassword'">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-light text-center text-main mb-1">{{ 'forgetpassword.title' | translate }}</h1>
+                            <p class="text-main mb-1 text-light">
+                                {{ 'forgetpassword.description' | translate }}</p>
+                            <p class="text-danger" *ngIf="message">{{message}}</p>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        <label class="col-3 col-form-label text-light">{{"forgetpassword.language" | translate}}</label>
+                        <ng-select class="col-9 p-0" [(ngModel)]="language" [items]="languageList" bindLabel="name" bindValue="id" [multiple]="false" [readonly]="false" [searchable]="false" [clearable]="false" placeholder="Select" (change)="changeLang(language)">
+                            <ng-template ng-label-tmp let-item="item">
+                                <img class="m-1" height="15" width="15" [src]="item.img" />
+                                <b>{{item.name}}</b>
+                            </ng-template>
+                        </ng-select>
+                    </div>
+                    <form class="user" [formGroup]="form">
+
+                        <validation-field-group [group]="form" [controlName]="'username'" [formSubmitAttempt]="formSubmitAttempt" [requiredSelect]="true">
+                            <div class="input-group mb-3">
+                                <label class="col-3 col-form-label text-light">{{"forgetpassword.input1" | translate}}</label>
+                                <input type="email" autocomplete="off" class="form-control m-0" formControlName="username" placeholder="Enter Email...">
+                            </div>
+                        </validation-field-group>
+
+                        <div class="text-center">
+                            <button type="button" class="button-login" (click)="submit()">{{"forgetpassword.forgetpassword" | translate}}</button>
+                            <button type="button" class="btn btn-info btn-block" (click)="switchForm('login')">{{"forgetpassword.submit" | translate}}</button>
+                        </div>
+                    </form>
+                </ng-container>
             </div>
-        </form>
-        <!-- <div class=" row pt-3">
-                    <hr _ngcontent-pga-c2="" class="col-4">
-                    <small class="">or</small>
-                    <hr _ngcontent-pga-c2="" class="col-4">
-                  </div> -->
-        <!-- <div class="text-center">
-                    <a class="small" href="#" routerLink="/login/register" routerLinkActive="active">Please contact
-                      admin <br> for sign up issue</a>
-                  </div> -->
-
+        </div>
     </div>
 </div>
