--- a/src/app/modules/login/pages/login/login.component.scss
+++ b/src/app/modules/login/pages/login/login.component.scss
@@ -1,31 +1,26 @@
-.bg-login-image {
-    background: url(../../../../../assets/images/login.jpg);
-    // background-repeat: repeat-x;
-    // background-position: center;
-    overflow-y: hidden;
+.wrap {
     width: 100%;
-    height: 1200px;
-    // background-repeat: repeat-x;
+}
+
+.image {
+    background: url(../../../../../assets/images/bg.jpg);
+    position: relative;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    // background-repeat: no-repeat;
-    // background-position: right top;
-    background-attachment: fixed;
 }
-h1 {
-    color: black;
-    font-size: 32px;
+
+.image:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
 }
-.div-left {
-    // border: 1px solid red;
-    margin-left: 100px;
-    width: 30%;
-    // display: table-cell;
-    // text-align: center;
-    // vertical-align: middle;
-}
-.div200 {
-    height: 200px;
-}
-.mar-2 {
-    margin-bottom: 2rem;
+
+.ng-value-custom {
+    margin-top: 10px;
 }
