--- a/src/app/modules/wfh/pages/wfh/wfh.component.html
+++ b/src/app/modules/wfh/pages/wfh/wfh.component.html
@@ -9,6 +9,10 @@
                     <div class="row ml-2 align-items-center h-400">
                         <h1>{{ 'wfh.thank' | translate }}!</h1>
                     </div>
+                    <button type="button" class="btn btn-outline-primary" (click)="report()">
+                        <i class="material-icons md-light md-36 align-middle">library_books</i>
+                        <span class="align-middle">Report</span>
+                    </button>
                     <div class="row ml-2 align-items-center h-400">
                         <p>{{ 'wfh.sended' | translate }}</p>
                     </div>
